# Thesis

./: .~lock.Testprotokoll.docx#  =4.2.0  Gelenkposen  GitToken  Gliederung Inhalt Thesis.docx  README.md  RobotPoses  Testprotokoll.docx  Thesis.docx  Z_Score_Berechnung.ods  Zeitkomplexitaet_Scanprozess.xlsx  behavior_tree.html  calibration_data.npz  calibration_data_old.npz  coordinates.csv  frames.gv  handeye_input_data.npz  hooks_dict_extract_alt  seven_axis_robot.urdf  sshtest.py  tcp_measurement.py  vibration_measurement.csv
MaskRCNN_InstanceSeg/: maskrcnn.ipynb
install/robot_control/share/robot_control/: package.sh  package.xml
install/robot_control/share/robot_control/config/: vc_params.yaml
install/robot_control/share/robot_control/launch/: robot_launch.py  scan_bar_launch.py  vc_vision_launch.py
src/action_servers/: CMakeLists.txt  setup.cfg  setup.py
src/action_servers/action_servers/: MoveTcpAlongAxis_action_server.py  fibonacci_action_server.py
src/bt_pkg/: CMakeLists.txt  setup.cfg  setup.py
src/bt_pkg/bt_pkg/: bt_scan_hookstrip.py
src/bt_pkg/bt_pkg/saved_trees/: behavior_tree.dot
src/robot_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robot_control/FC/: FC_attachment_controller.py  FC_call_move_joint_service.py  FC_call_move_linear_service.py  FC_call_move_ptp_service.py  FC_cam_geometrics_handler.py  FC_dict_receive_processing.py  FC_doc_visualization.py  FC_frame_handler.py  FC_geometrics_handler.py  FC_gripper_handler.py  FC_hook_geometrics_dual_cam_wrapper  FC_hook_geometrics_handler.py  FC_hook_geometrics_handler_for_controller.py  FC_hook_geometrics_handler_for_trajectory.py  FC_nn_output_filter.py  FC_parameterized_cubic_spline.py  FC_save_load_global_hook_dict.py  FC_stereo_triangulation_processor.py  FC_trajectoroy_3d_plotter.py  FC_trajectory_controller.py  FC_triangulation_processor.py  FC_two_cam_stereo_triangulation_processor.py
src/robot_control/action/: MoveRobot.action
src/robot_control/config/: vc_params.yaml
src/robot_control/launch/: robot_launch.py  scan_bar_launch.py  test_7dof.launch.py  vc_vision_dualcam_launch.py  vc_vision_launch.py
src/robot_control/meshes/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl
src/robot_control/robot_control/: .~lock.Abweichungen Hakenpositionierung.ods#  Abweichungen Hakenpositionierung.ods  FC_quaternion_to_euler.py  MoveTcpAlongAxis_action_client.py  _dummy_node.py  _eval_triangulation.ipynb  attachment_control_trajectory.py  attachment_node.py  attachment_servoing.py  bt_scan_hookstrip.py  camera_flange_calibration_node.py  control.py  define_working_frame.py  define_working_frame_needle.py  fibonacci_action_client.py  handeye_result.npz  hook_data_listener.py  ibvs_2d.py  ik_example_node.py  move_along_baseline_client.py  move_lin_by_key.py  move_robot_service_server.py  pbvs_2d.py  ptp_movement_node.py  read_delta_transformation.py  scan_bar copy.py  scan_bar.py  scan_bar_combined_triangulation.py  scan_bar_horizontal_triangulation copy.py  scan_bar_horizontal_triangulation.py  scan_bar_horizontal_triangulation_pxmm.py  scan_bar_vertical_triangulation.py  set_working_frame.py  tf_frames_publisher.py  trajectory_control.py  trajectory_frame_converter.py  trajectory_recorder.py  vibration_measurement.csv  visual_servoing_control.py  visualize_vibrationdata.ipynb
src/robot_control/robot_control/data/: .~lock.CAM_frame_in_tcp.csv#  .~lock.WORK_frame_in_world.csv#  .~lock.frames_transformation_matrices.csv#  CAM_frame_in_tcp.csv  CAM_frame_in_tfc.csv  Hook-Line-Visualisierung.ipynb  WORK_frame_in_world.csv  base_transformation_matrix.csv  elbow_transformation_matrix.csv  elbow_world.csv  global_hook_dict.csv  line_visualization.py  tcp_world.csv  tfc_transformation_matrix.csv  tfc_world.csv  work_transformation_matrix.csv  work_world.csv
src/robot_control/robot_control/data/CAM_to_TFC_old/: CAM_frame_in_tcp_20250506_1131.csv
src/robot_control/robot_control/data/global_scan_dicts/: .~lock.global_hook_dict_horizontal.csv#  global_hook_dict_horizontal (Kopie).csv  global_hook_dict_horizontal (noch eine Kopie).csv  global_hook_dict_horizontal.csv  global_hook_dict_horizontal_fullbaselinevector.csv  global_hook_dict_horizontal_modellA.csv  global_hook_dict_horizontal_modellB.csv  global_hook_dict_horizontal_modellC.csv  global_hook_dict_horizontal_modellD.csv  global_hook_dict_horizontal_optimizedbaselinevector.csv  global_hook_dict_vertical.csv  global_hook_dict_vertical_fullbaseline_vector.csv  global_hook_dict_vertical_optimizedbaselinevector.csv
src/robot_control/robot_control/vibration_measurement/: vibration_measurement.csv  vibration_measurement_2.csv  vibration_measurement_3.csv  visualize_vibrationdata.ipynb
src/robot_control/urdf/: 7_axis.urdf  7_axis.urdf.xacro  Transformations_KR1205  kr1205.urdf.xacro  kr1205_test.urdf.xarco  seven_dof.urdf
(+19844 files in other folders)
